# riptide_description_sim

./: CMakeLists.txt  model.config  model.sdf  package.xml
config/: riptide_simulation_debug.rviz  riptide_simulation_pool.j2  riptide_simulation_pool.rviz
include/: Thruster.hh
launch/: view_riptide.launch.py
meshes/: propeller.dae
model/: riptide_body.stl  riptide_fin.stl
src/: Thruster.cc
urdf/: gazebo.urdf.xacro  riptide.urdf.xacro  riptide_actuators.urdf.xacro  riptide_battery.urdf.xacro  riptide_echosounder.urdf.xacro  riptide_fin.urdf.xacro  riptide_imu.urdf.xacro  riptide_pressure.urdf.xacro  riptide_sim.urdf.xacro  ros2control.urdf.xacro
worlds/: infinite_ocean.sdf
